More scripts combined

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,4 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 Assets/MOBAScripts/mapa1.fbx
+Assets/MOBA/Prefabs/Map.fbx
